--- a/index.html
+++ b/index.html
@@ -1858,17 +1858,38 @@
 
         <!-- Footer -->
         <footer class="py-12 border-t border-white/5 bg-black/20">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row justify-between items-center gap-6">
-                <div class="flex items-center gap-2">
-                    <i data-lucide="sparkles" class="text-brand-primary w-5 h-5"></i>
-                    <span class="font-display font-bold text-lg">Super OpenCode</span>
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="flex flex-col items-center gap-6 mb-8">
+                    <div class="text-center">
+                        <p class="text-sm text-gray-400 mb-3">本项目基于以下优秀开源项目构建，核心能力完全来自原始项目</p>
+                        <div class="flex flex-wrap justify-center gap-4">
+                            <a href="https://github.com/opencode-ai/opencode" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 rounded-lg bg-white/5 border border-white/10 hover:border-brand-primary/50 hover:bg-white/10 transition-all group">
+                                <i data-lucide="terminal" class="w-4 h-4 text-brand-primary"></i>
+                                <span class="text-sm text-gray-300 group-hover:text-white">OpenCode</span>
+                                <span class="text-xs text-gray-500">AI 编程助手核心引擎</span>
+                            </a>
+                            <a href="https://github.com/pinkpixel-dev/oh-my-opencode" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 rounded-lg bg-white/5 border border-white/10 hover:border-brand-secondary/50 hover:bg-white/10 transition-all group">
+                                <i data-lucide="bot" class="w-4 h-4 text-brand-secondary"></i>
+                                <span class="text-sm text-gray-300 group-hover:text-white">Oh-My-OpenCode</span>
+                                <span class="text-xs text-gray-500">多代理协作框架</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="text-sm text-gray-500">
-                    &copy; 2024 OpenCode Methodology. All rights reserved.
-                </div>
-                <div class="flex gap-4">
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="github" class="w-5 h-5"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="twitter" class="w-5 h-5"></i></a>
+                <div class="flex flex-col md:flex-row justify-between items-center gap-6 pt-6 border-t border-white/5">
+                    <div class="flex items-center gap-2">
+                        <i data-lucide="sparkles" class="text-brand-primary w-5 h-5"></i>
+                        <span class="font-display font-bold text-lg">Super OpenCode</span>
+                        <span class="text-xs text-gray-500 ml-2">配置打包 & 个人实践整理</span>
+                    </div>
+                    <div class="text-sm text-gray-500">
+                        基于 OpenCode + Oh-My-OpenCode 开源项目
+                    </div>
+                    <div class="flex gap-4">
+                        <a href="https://github.com/opencode-ai/opencode" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="OpenCode"><i data-lucide="terminal" class="w-5 h-5"></i></a>
+                        <a href="https://github.com/pinkpixel-dev/oh-my-opencode" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="Oh-My-OpenCode"><i data-lucide="bot" class="w-5 h-5"></i></a>
+                        <a href="https://github.com/lengjingxu/oh-my-opencode-releases" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="本项目 GitHub"><i data-lucide="github" class="w-5 h-5"></i></a>
+                    </div>
                 </div>
             </div>
         </footer>
